--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     
     <title>LILIANA MOLINS | Abogada de Confianza</title>
 
-    <link rel="icon" type="image/svg+xml" href="/public/images/logo-title.png">
+    <link rel="icon" type="image/svg+xml" href="./images/logo-title.png">
 </head>
 
 <body>
@@ -104,7 +104,7 @@
                     <a href="#contacto" class="btn-primary dark-outline">Conozca a Nuestro Equipo</a>
                 </div>
                 <div class="about-image">
-                    <img src="/public/images/oficina-estudio.png" alt="Oficina del estudio jurídico">
+                    <img src="./images/oficina-estudio.png" alt="Oficina del estudio jurídico">
                 </div>
             </div>
         </section>
