--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
             
             <div id="top-header">
                 <a href="#inicio" id="logo" aria-label="Ir al inicio">
-                    <img src="/public/images/logo-estudio-juridico-dark.svg" alt="Logo Estudio Jurídico">
+                    <img src="./images/logo-estudio-juridico-dark.svg" alt="Logo Estudio Jurídico">
                 </a>
             </div>
             
