Nuevos cambios en diseño y html

--- a/public/index.html
+++ b/public/index.html
@@ -233,7 +233,7 @@
 
             <div class="footer-bottom-bar">
                 <section id="copyright">
-                    <p>Copyright © 2025 Estudio Molins. Todos los derechos reservados.</p>
+                    <p>Copyright © 2025 Estudio Liliana Molins. Todos los derechos reservados.</p>
                 </section>
             </div>
 
