--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 
     <link rel="stylesheet" href="../public/css/style.css">
 
-    <link rel="icon" type="image/svg+xml" href="/public/images/logo-title.png">
+    <link rel="icon" type="image/svg+xml" href="./public/images/logo-title.png">
 </head>
 
 <body>
