Nuevos cambios en diseño y html

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
     <meta property="og:title" content="Liliana Molins | Abogada Civil y Laboral en CABA">
     <meta property="og:description"
-        content="Estudio jurídico con más de 20 años de experiencia. Asesoramiento profesional.">
+        content="Estudio jurídico con más de 15 años de experiencia. Asesoramiento profesional.">
     <meta property="og:type" content="website">
 
     <meta property="og:url" content="https://www.estudiomolins.com.ar">
@@ -30,9 +30,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 
-    <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="./public/css/style.css">
 
-    <link rel="icon" type="image/svg+xml" href="../public/images/logo-title.png">
+    <link rel="icon" type="image/svg+xml" href="./public/images/logo-title.png">
 </head>
 
 <body>
