--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 
-    <link rel="stylesheet" href="./public/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
-    <link rel="icon" type="image/svg+xml" href="./public/images/logo-title.png">
+    <link rel="icon" type="image/svg+xml" href="./images/logo-title.png">
 </head>
 
 <body>
